# HarmoniKt

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  README.md  build.gradle.kts  docker-compose.yml  integration.sh  package-lock.json  package.json  release.config.mjs  settings.gradle.kts
spot-robot-mock/: pyproject.toml
spot-robot-mock/app/: main.py  mock.py
spot-robot-mock/app/bosdyn/api/: auth_pb2.py  data_acquisition_plugin_service_pb2.py  data_acquisition_service_pb2.py  data_acquisition_store_pb2.py  data_acquisition_store_service_pb2.py  data_chunk_pb2.py  directory_pb2.py  directory_registration_pb2.py  estop_pb2.py  geometry_pb2.py  gripper_camera_param_service_pb2.py  header_pb2.py  image_geometry_pb2.py  image_pb2.py  image_service_pb2.py  lease_pb2.py  lease_service_pb2.py  local_grid_service_pb2.py  network_stats_pb2.py  payload_estimation_pb2.py  payload_pb2.py  payload_registration_pb2.py  point_cloud_pb2.py  power_service_pb2.py  ray_cast_pb2.py  ray_cast_service_pb2.py  robot_command_pb2.py  robot_command_service_pb2.py  signals_pb2.py  (+6 more)
spot-robot-mock/app/model/: __init__.py
spot-service-py/: Dockerfile  README.md  pyproject.toml
spot-service-py/app/: __init__.py  main.py  models.py
spot-service-py/app/api/: robot_api.py
spot-service-py/app/handlers/: __init__.py  marker_handlers.py  robot_handlers.py
spot-service-py/app/repositories/: __init__.py  spot_marker_repository.py  spot_robot_repository.py
spot-service-py/app/resources/: __init__.py  spot_markers.py  spot_robots.py
spot-service-py/app/services/: spot_robot_service.py
(+218 files in other folders)
