[project]
name = "spot-robot-mock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "protobuf>=6.31.1",
    "bosdyn-client>=5.0.0",
    "fastapi[standard]>=0.116.1",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]


[tool.poetry]
packages = [{ include = ".", from = "app" }]
