[project]
name = "spot-service-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bosdyn-client>=5.0.0",
    "fastapi[standard]>=0.116.1",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]

[tool.poetry]
packages = [{ include = ".", from = "app" }]
